# ai-voice-assistant

./: README.md  docker-compose.yml  pyproject.toml  run.sh
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/assets/: sample_reading.m4a
backend/notebooks/: chat_service.ipynb  speech_to_text_service.ipynb  text_to_speech_service.ipynb
backend/src/app/: __init__.py  main.py
backend/src/app/routers/: audio_routes.py  chat_routes.py  text_routes.py
backend/src/app/schemas/: chat_schemas.py
backend/src/app/services/: __init__.py  chat_service.py  chat_services.py  speech_to_text_service.py  speech_to_text_services.py  text_to_speech._service.py  text_to_speech_services.py
backend/src/app/utils/: file_utils.py  project_config.py
backend/src/app/utils/chat_utils/: __init__.py  chat_utils.py
backend/tests/fixtures/: example_fixture.py
backend/tests/unit_tests/: test__main.py
backend/tests/unit_tests/services/: test__chat_services.py  test__speech_to_text_services.py  test__text_to_speech_services.py
frontend/: README.md  dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.module.css  page.tsx
frontend/src/app/components/AudioPlayer/: AudioPlayer.component.tsx
frontend/src/app/components/VoiceAssistant/: VoiceAssistant.component.tsx  useVoiceAssistant.hook.ts
frontend/src/app/services/: aivoiceassistant.service.ts  aivoiceassistant.service.ts:Zone.Identifier
tests/: __init__.py
(+2 files in other folders)
